Provide page title

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
       <li><a href="#">Tentang</a></li>
       <li><a href="#">Aturan</a></li>
       <li><a href="#">TOR</a></li>
-      <li><%= link_to "Kontak Kami", new_contact_path, class: "#{active_class(new_contact_path)}" %></li>
+      <li><%= link_to "Hubungi Kami", new_contact_path, class: "#{active_class(new_contact_path)}" %></li>
     </ul>
   </div>
 </footer>
