--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -61,7 +61,7 @@
         </div>
       </section>
     <% end %>
-    <section style= "margin-bottom: 2rem;">
+    <section style= "margin-bottom: 2rem; margin-top: 1rem;">
       <small>**Validasi laporan akan dikirimkan ke email anda setelah melakukan submit laporan ini. Silahkan cek email anda dan click link yang telah kami berikan untuk proses validasi.</small>
     </section>
     <%= f.submit 'Simpan', class: 'button-form' %>
