--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Bagikan Ceritamu') %>
 <div class="border-bottom-double content-header">
   <h3> Bagikan Ceritamu </h3>
   <div class="subheader"> laporkan kasus suap </div>
